# data_processor

./: .gitignore  Cargo.toml  README.MD  README.md  cli.yml  config.toml  kafka-dc.yml
backend/: Cargo.toml  README.md  kafka-dc.yml
backend/core/: Cargo.toml  types.json
backend/core/src/: models.rs
backend/extensions/decoder/: config.json
backend/extensions/facial_detecting/: Cargo.toml  config.json
backend/extensions/facial_detecting/src/: config.rs  lib.rs  models.rs  post_processing.rs  predictor.rs  utils.rs
backend/extensions/facial_recognizer/: Cargo.toml  config.json
backend/extensions/facial_recognizer/src/: config.rs  lib.rs  models.rs  predictor.rs
backend/extensions/image_embedding/: Cargo.toml  config.json
backend/extensions/image_embedding/src/: config.rs  lib.rs
backend/extensions/text_embedding/: Cargo.toml  config.json
backend/extensions/text_embedding/src/: config.rs
backend/http_server/: Cargo.toml  diesel.toml
backend/http_server/migrations/2024-12-22-134139_initial/: down.sql  up.sql
backend/http_server/src/: lib.rs  models.rs  schema.rs
backend/http_server/src/routes/: mod.rs  pipeline.rs
backend/http_server/src/services/: mod.rs  pipeline.rs  plugin.rs
backend/pipeline/: Cargo.toml
backend/pipeline/src/: config.rs  lib.rs  models.rs  pipeline.rs  utils.rs
backend/pipeline/src/ml/facial_processing/recognition/: predictor.rs
backend/pipeline/src/ml/search/visual/: predictor.rs
backend/pipeline/src/services/: facial_processing.rs  pipeline.rs  search.rs
backend/pipeline_consumer/: Cargo.toml
backend/pipeline_consumer/src/: config.rs  lib.rs
deployment/backend/: Dockerfile
deployment/docker-compose/: dev.yml
deployment/kafka/: create_topics_default.sh
docs/: README.md
docs/deployment/: README.md
src/: main.rs  models.rs
src/ml/facial_processing/detection/: predictor.rs
src/ml/search/textual/: predictor.rs
src/ml/search/visual/: predictor.rs
src/services/: mod.rs  search.rs
