[workspace]
resolver = "2"
members = ["http_server", "core"]

[workspace.dependencies]
http_server = { path = "./http_server" }
core = { path = "./core" }
rdkafka = { version = "0.25", features = ["cmake-build"] }
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "stream"] }
itertools = "0.13.0"
ndarray = "0.16"
nalgebra = "0.33.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv_config = "0.2.1"
dotenvy = "0.15.7"
ort = "2.0.0-rc.7"
uuid = "1.11.0"


[package]
name = "data_processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_server"
path = "bin/http_server.rs"

[[bin]]
name = "initial_plugins_data"
path = "bin/initial_plugins_data.rs"


[dependencies]
http_server.workspace = true
core.workspace = true
tokio.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv_config.workspace = true
dotenvy.workspace = true
