[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5.2", features = ["full"] }
tower-cookies = "=0.10.0"
utoipa = { features = ["axum_extras"], version = "4.2.3" }
utoipa-swagger-ui = { features = ["axum"], version = "7.1.0" }
diesel = { version = "2.2.0", features = ["postgres"] }
tokio.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv_config.workspace = true
dotenvy.workspace = true
image.workspace = true
core.workspace = true
axum.workspace = true
