[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "2.0.0-rc.7"
ndarray = "0.16"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
image = "0.25.5"
nalgebra = "0.33.2"
rayon = "1.10.0"
tokenizers = { version = "0.19", features = ["hf-hub", "http"] }
itertools = "0.13.0"
video-rs = { version = "0.10.2", features = ["ndarray"] }
toml = "0.8.19"
reqwest = { version = "0.12.9", features = ["blocking", "stream"] }
