[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
itertools.workspace = true
ndarray.workspace = true
nalgebra.workspace = true
image.workspace = true
dotenv_config.workspace = true

ort = "2.0.0-rc.7"
rayon = "1.10.0"
tokenizers = { version = "0.19", features = ["hf-hub", "http"] }
video-rs = { version = "0.10.2", features = ["ndarray"] }
