[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
itertools.workspace = true
ndarray.workspace = true
nalgebra.workspace = true
image.workspace = true
dotenv_config.workspace = true
video-rs.workspace = true
dotenvy.workspace = true
rayon = "1.10.0"
facial_recognizer.workspace = true
facial_detecting.workspace = true
image_embedding.workspace = true
